# dd_3d_lottery_backend

./: .gitignore  Cargo.toml  README.md
docs/: 01-结构化需求规格说明书.md  02-精确接口契约.md  03-架构与设计约束.md  04-非功能性需求量化指标.md  05-过程与决策记录.md  06-验证与质量保障.md  07-部署与运维.md  08-CosmWasm合约规范合规性.md  09-GitHub仓库设置指南.md  10-部署报告模板.md  11-部署成功关键因素.md  会话管理逻辑问题修复报告文档.md  会话管理逻辑问题分析报告文档.md  使用示例.md  修改总结报告文档.md  去中心化随机数安全机制.md  奖金分配算法详细说明文档.md  承诺阶段预验证功能实现报告文档.md  技术文档.md  测试补充说明.md  系统架构设计文档.md  部署总结报告文档.md  部署指南文档.md  项目总结文档.md  项目结构说明文档.md  项目重组总结文档.md
scripts/: deploy.sh  deploy_to_github.sh  run_tests.sh  test_simple.sh  upload_to_github.sh
src/: contract.rs  error.rs  execute.rs  lib.rs  lottery_logic.rs  msg.rs  phase_manager.rs  query.rs  reward_system.rs  state.rs
tests/: end_to_end_tests.rs  integration.rs  performance_tests.rs  reward_distribution_tests.rs  security_tests.rs  test_config.rs
